swapping video files and fixing wadth issue on mobile

--- a/css/wills-portfolio-f29842.webflow.css
+++ b/css/wills-portfolio-f29842.webflow.css
@@ -543,6 +543,13 @@ figcaption {
 }
 
 @media only screen and (max-width: 600px) {
+  video {
+    width: 300px;
+    height: 264px;
+
+  }
+
+
   #services_cont {
     flex-direction: column;
 
